Fix vertical alignment in IE 9

--- a/assets/css/_7-trumps/_7-trumps.hero--home.css
+++ b/assets/css/_7-trumps/_7-trumps.hero--home.css
@@ -12,6 +12,7 @@
     display: -webkit-box;
     align-content: center;
     -webkit-box-align: center;
+    width: 100%;
     min-height: 100%;
 
     /* position my head */
